src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

img {
    @apply rounded-lg;
}

@layer base {
    :root {
        --background: 0 0% 98%;
        --foreground: 0 0% 27%;
        --card: 0 0% 98%;
        --card-foreground: 0 0% 27%;
        --popover: 0 0% 98%;
        --popover-foreground: 0 0% 27%;
        --primary: 0 0% 9%;
        --primary-foreground: 0 0% 98%;
        --secondary: 0 0% 96.1%;
        --secondary-foreground: 0 0% 9%;
        --muted: 0 0% 96.1%;
        --muted-foreground: 0 0% 45.1%;
        --accent: 207 39.1% 59.4%;
        --accent-foreground: 0 0% 9%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 0 0% 98%;
        --border: 0 0% 89.8%;
        --input: 0 0% 89.8%;
        --ring: 0 0% 27%;
        --chart-1: 12 76% 61%;
        --chart-2: 173 58% 39%;
        --chart-3: 197 37% 24%;
        --chart-4: 43 74% 66%;
        --chart-5: 27 87% 67%;
        --radius: 0.5rem;
    }
    .dark {
        --background: 0 0% 7.1%;
        --foreground: 0 0% 100% / 87%;
        --card: 0 0% 7.1%;
        --card-foreground: 0 0% 100% / 87%;
        --popover: 0 0% 7.1%;
        --popover-foreground: 0 0% 100% / 87%;
        --primary: 0 0% 98%;
        --primary-foreground: 0 0% 9%;
        --secondary: 0 0% 19.9%;
        --secondary-foreground: 0 0% 100% / 87%;
        --muted: 0 0% 15.7%;
        --muted-foreground: 0 0% 100% / 60%;
        --accent: 207 39.1% 59.4%;
        --accent-foreground: 0 0% 100% / 87%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 0 0% 100% / 87%;
        --border: 0 0% 25%;
        --input: 0 0% 25%;
        --ring: 0 0% 83.1%;
        --chart-1: 220 70% 50%;
        --chart-2: 160 60% 45%;
        --chart-3: 30 80% 55%;
        --chart-4: 280 65% 60%;
        --chart-5: 340 75% 55%;
    }
}

@layer base {
    * {
        @apply border-border;
    }
    body {
        @apply bg-background text-foreground;
    }
}

/* Remove scrollbar cause it looks janky */
::-webkit-scrollbar {
    @apply hidden;
}

h1 {
    @apply text-3xl font-bold;
}

h2 {
    @apply text-2xl font-bold;
}

h2::after {
    content: "";
    display: block;
    width: 100%;
    height: 1px;
    opacity: 30%;
    background-color: hsl(var(--primary));
    @apply w-full my-2;
}

h3 {
    @apply text-xl font-bold;
}

a {
    color: #5f8db2;
}

.dark a {
    color: rgb(116, 161, 198);
}

a:visited {
    color: #6f74c0;
}

ul {
    @apply list-disc list-inside;
}

li {
    @apply mb-2;
}

figure {
    @apply rounded-lg md:max-w-[80%] mx-auto;
}

lite-youtube {
    @apply rounded-lg;
}

figcaption {
    @apply text-center;
}

table {
    @apply w-full;
}

th {
    @apply bg-gray-200;
}

td {
    @apply border-t border-border;
}

.deco {
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="%23000"><path d="M0 0v100c250 0 375-24 500-48 125 24 250 48 500 48V0H0Z" opacity=".5"></path><path d="M0 0v4c250 0 375 24 500 48C625 28 750 4 1000 4V0H0Z"></path></svg>');
    background-repeat: no-repeat; /* Prevents repetition */
    background-size: cover; /* Scales to fill the parent */
    background-position: center; /* Centers the image */
    @apply rounded-t-lg;
}

.deco-node {
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" fill="%23000"><path d="m0 4 150 40h160l190 50 190-50h160l150-40V0H0v4z"></path></svg>');
    background-repeat: no-repeat; /* Prevents repetition */
    background-size: cover; /* Scales to fill the parent */
    background-position: center; /* Centers the image */
    @apply rounded-t-lg;
}

@keyframes drawLine {
    to {
        stroke-dashoffset: 0;
    }
}

/* Minigame stuff */
.box {
    @apply transition-all w-[40px] h-[40px] border border-black border-opacity-10 cursor-pointer;
}

/* if min-w > md and min-h > 500px then box size is 50px */
@media (min-width: 768px) and (min-height: 500px) {
    .box {
        @apply w-[50px] h-[50px];
    }
}

.box-empty {
    @apply box bg-gray-200;
}

.dark .box-empty {
    @apply box bg-gray-600;
}

.box-blue {
    @apply box bg-blue-500;
}

.box-red {
    @apply box bg-red-500;
}

.box-green {
    @apply box bg-green-500;
}

.box-yellow {
    @apply box bg-yellow-500;
}

.x-close {
    @apply absolute top-6 right-6 cursor-pointer opacity-70 hover:opacity-100;
}

.grid-bg {
    background-image: linear-gradient(
            to right,
            rgba(0, 0, 0, 0.2) 1px,
            transparent 1px
        ),
        linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
    background-size: 70px 70px;
    background-position: 55px 0;
}

.card-deco {
    background-image: url("/images-opt/card_deco.webp");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.dark .card-deco {
    background-image: url("/images-opt/card_deco_dark.webp");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

